--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Ilia-Ivankov_python-project-52
-sonar.organization=ilia-ivankov
+sonar.projectKey=MrMAx-26_python-project-52
+sonar.organization=mrmax-26
 
 sonar.sources=task_manager
 sonar.tests=task_manager/tests
