--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "rollbar>=1.3.0",
     "pytest-cov>=6.1.1",
     "pytest-django>=4.11.1",
+    "requests>=2.32.3",
 ]
 
 [dependency-groups]
