--- a/.github/workflows/test_django.yaml
+++ b/.github/workflows/test_django.yaml
@@ -1,9 +1,9 @@
 name: Test Django
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -13,13 +13,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12'
+          python-version: '3.12'  # Убедитесь, что версия Python соответствует вашей локальной
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt  # Установка зависимостей из requirements.txt
 
-      - name: Run server
+      - name: Run tests
         run: |
-          python manage.py runserver 0.0.0.0:8000
+          python manage.py test  # Запуск тестов
+
+      - name: Check installed packages
+        run: |
+          pip list  # Вывод списка установленных пакетов
