--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,10 @@ packages = ["task_manager", "task_manager.labels", "task_manager.statuses", "tas
 
 [tool.uv]
 package = true
+
+[build-system] 
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel] 
+packages = ["task_manager"]
