--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,24 +7,31 @@ authors = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "dj-database-url>=3.0.1",
-    "django>=5.2.4",
-    "django-bootstrap5==24.3",
-    "django-filter>=25.1",
-    "gunicorn>=23.0.0",
+    "dj-database-url>=2.3.0",
+    "django>=5.2",
+    "pytest>=8.3.5",
+    "python-dotenv>=1.1.0",
     "psycopg2-binary>=2.9.10",
-    "python-dotenv>=1.1.1",
-    "rollbar>=1.3.0",
+    "django-bootstrap5>=25.1",
+    "gunicorn>=23.0.0",
     "whitenoise>=6.9.0",
+    "django-filter>=25.1",
+    "rollbar>=1.3.0",
+    "pytest-cov>=6.1.1",
+    "pytest-django>=4.11.1",
+    "requests>=2.32.3",
 ]
 
 [dependency-groups]
 dev = [
-    "coverage>=7.10.2",
-    "pytest>=8.4.1",
-    "pytest-django>=4.11.1",
-    "ruff>=0.12.7",
+    "ruff>=0.9.6",
 ]
+
+[tool.setuptools]
+packages = ["task_manager", "task_manager.labels", "task_manager.statuses", "task_manager.tasks", "task_manager.users", "task_manager.tests"]
+
+[tool.uv]
+package = true
 
 [build-system] 
 requires = ["hatchling"]
