--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,15 @@ dependencies = [
     "django-filter>=25.1",
     "rollbar>=1.3.0",
     "pytest-cov>=6.1.1",
-    "pytest-django>=4.11.1",
     "requests>=2.32.3",
 ]
 
 [dependency-groups]
 dev = [
-    "ruff>=0.9.6",
+    "coverage>=7.10.2",
+    "pytest>=8.4.1",
+    "pytest-django>=4.11.1",
+    "ruff>=0.12.7",
 ]
 
 [tool.setuptools]
