--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install hatch  
-          hatch install      
+          pip install hatch
+          hatch build    
 
       - name: Hexlet project check
         uses: hexlet/project-action@release
