--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,20 +5,17 @@ description = ""
 authors = [
     { name = "Maxim Shevtsov", email= "Shevtsov_stv@mail.ru" }
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
-    "dj-database-url>=2.3.0",
-    "django>=3.2",
-    "pytest>=8.3.5",
-    "python-dotenv>=1.1.0",
-    "psycopg2-binary>=2.9.10",
-    "django-bootstrap5>=25.1",
-    "gunicorn>=23.0.0",
-    "whitenoise>=6.9.0",
+    "dj-database-url>=3.0.1",
+    "django>=5.2.4",
+    "django-bootstrap5==24.3",
     "django-filter>=25.1",
+    "gunicorn>=23.0.0",
+    "psycopg2-binary>=2.9.10",
+    "python-dotenv>=1.1.1",
     "rollbar>=1.3.0",
-    "pytest-cov>=6.1.1",
-    "requests>=2.32.3",
+    "whitenoise>=6.9.0",
 ]
 
 [dependency-groups]
